--- a/src/main/resources/templates/employees/new-employee.html
+++ b/src/main/resources/templates/employees/new-employee.html
@@ -7,13 +7,13 @@
 	<body>
 	<nav th:replace="layouts :: nav"></nav>
 	<div class="container">			
-		<form action="/employees/save" th:object="${employee}" method="POST">						
+		<form th:action="@{/employees/save}" th:object="${employee}" method="POST">						
 			<input type="text" placeholder="First Name" th:field="${employee.firstName}" 
 						class="mb-4 col-2 col-xs-4">
 			<input type="text" placeholder="Last Name" th:field="${employee.lastName}" 
 						class="mb-4 col-2 col-xs-4">
 			<input type="text" placeholder="email" th:field="${employee.email}" 
-						class="mb-4 col-2 col-xs-4">														
+						class="mb-4 col-2 col-xs-4">																
 			<button type="submit" class="btn btn-info col-2">Create employee</button>
 			
 		</form>
